# Fixed-Noise-Diffusion

./: .bandit.yml  .gitignore  .mega-linter.yml  README.md  pyproject.toml
.github/workflows/: cifar10-data-smoke.yml  fixed-noise-diffusion-ci.yml  mega-linter.yml  wp2-celeba64-validation.yml  wp2-cifar100-validation.yml  wp2-stl10-validation.yml
configs/: cifar10_base.yaml  cifar10_fixed_pool_100k.yaml  cifar10_fixed_pool_10k.yaml  cifar10_fixed_pool_1k.yaml  cifar10_fixed_pool_whitened_10k.yaml  cifar10_gaussian.yaml  smoke.yaml
scripts/: run_wp2_sweep.ps1
src/fixed_noise_diffusion/: __init__.py  checkpoints.py  config.py  data.py  diffusion.py  evaluate.py  evaluate_pool_generalization.py  evaluate_sample_quality.py  evaluate_timestep_diagnostics.py  integrity.py  logging_utils.py  model.py  noise.py  plot_results.py  plotting.py  summarize_phase_diagram.py  summarize_sample_quality.py  sweep.py  train.py  utils.py
src/fixed_noise_diffusion/configs/: celeba64_base.yaml  cifar100_base.yaml  cifar10_base.yaml  cifar10_fixed_pool_1k.yaml  cifar10_fixed_pool_whitened_10k.yaml  smoke.yaml  stl10_base.yaml
src/fixed_noise_diffusion/scripts/: run_wp2_sweep.ps1
tests/: test_data.py  test_integrity.py  test_noise.py  test_pool_generalization.py  test_smoke_config.py  test_summarize_phase_diagram.py  test_summarize_sample_quality.py  test_timestep_diagnostics.py
